# CISCO_SDWAN_AS_CODE

./: .gitignore  .gitlab-ci.yml  Project Structure.txt  Project_Structure_v2.txt  README.md  pyproject.toml
ansible/: inventory.yml  requirements.yml  sdwan_check_templates.yml  sdwan_get_devices.yml
ansible/group_vars/all/: vmanage.yml
python/: requirements.txt  vmanage_devices.py
src/cisco_sdwan_as_code/: __init__.py
terraform/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf
terraform/yaml/: site1.yml
